# LAPUTAN

./: .gitignore  .readthedocs.yaml  LICENSE  MANIFEST.in  README.org  pyproject.toml  requirements.txt  setup.py
arx/: changelog.org  pyproject_setuptools.toml  setup.cfg  setup.py  version_log_arx.org
arx/idl/: conv_cube.pro  fitsheader_pc2cd.pro
arx/src/: impro.py  plots.py
cas/: sed.py  sizedist.py
cas/lib/: sed_ARAA.h5
cas/lib/HD21_Fig14/: irem_summary.mrt
cas/lib/HD21_Fig14/PaxHeader/: extpol_summary.mrt
doc/src/: conf.py
idl/: README.org  conv_prog.pro  convolve_image.pro  hswarp.pro
jnum/: arrays.ipynb  astrom.ipynb  calib.ipynb  imaging.ipynb  inout.ipynb  maths.ipynb  plots.ipynb
laputan/lib/: h52asc.py
man/: _init.ipynb  impro.ipynb  inout.ipynb  instr.ipynb  latte.ipynb  maths.ipynb  plots.ipynb  utbox.ipynb
man/lib/: M82_04_LL3.fits  M82_04_LL3_unc.fits  M82_04_SL3.fits  M82_04_SL3_unc.fits  plotXY_optiprop.h5
rapyuta/: __init__.py  impro.py  inout.py  instr.py  latte.py  maths.py  plots.py  utbox.py  version.py
rapyuta/_dev/: __init__.py  _version.py  scm_version.py
rapyuta/impro/: #impro.py#  __init__.py  idlastro.py  impro.py  utils.py
rapyuta/instr/: __init__.py  akari.py  instr.py  jwst.py  utils.py
rapyuta/lib/: h52asc.py
rapyuta/lib/filt/: filt_IRAC1.txt  filt_IRAC2.txt  filt_IRAC3.txt  filt_IRAC4.txt  filt_MIPS1.txt  filt_MIPS2.txt  filt_MIPS3.txt  filt_WISE1.txt  filt_WISE2.txt  filt_WISE3.txt  filt_WISE4.txt  h52asc.py
rapyuta/lib/logo/: rapyuta.txt
rapyuta/plots/: __init__.py  plots.py  utils.py
rapyuta/tests/: __init__.py
swing/: README.org  makefile  utilities.f90
tests/: #test_imaging.py#  __init__.py  psf.py  sed.py  test_arrays.py  test_astrom.py  test_calib.py  test_imaging.py  test_inout.py  test_maths.py  test_plots.py
tests/lib/: Kernel_HiRes_Gauss_02.0_to_Gauss_06.0.fits  Kernel_HiRes_Gauss_02.5_to_Gauss_06.0.fits  Kernel_HiRes_Gauss_03.5_to_Gauss_06.0.fits  M82_06N_SL1.fits  M82_06N_SL1_unc.fits  M82_IRAC1_DP.fits  M82_SL1.fits  M82_SL1_unc.fits  M82_SL2.fits  M82_SL2_unc.fits  M82_template.fits  M82_template_unc.fits  dustobs.h5  plotXY_D2G.h5
tests/lib/3390001.1/irc_specred_out_Nh/: F011100297_N002.fits  spec0.spc  spec1.spc  spec10.spc  spec2.spc  (+28 more)
tests/test_coadd_tool/reproject/: NGC1140_IRS.fits  NGC1140_IRS_0.fits  NGC1140_IRS_unc.fits
tests/test_coadd_tool/swarp/: NGC1140_IRS.fits  NGC1140_IRS_0.fits  NGC1140_IRS_unc.fits
tests/test_irc_pointing/: 3390001.1_Nh.fits  3390001.1_Nh_2err_unc.fits  3390001.1_Nh_2errfill_unc.fits  3390001.1_Nh_2errfillsup_unc.fits  3390001.1_Nh_2errsup.fits  3390001.1_Nh_2errsup_unc.fits  3390001.1_Nh_2errswp_unc.fits  3390001.1_Nh_pt3_unc.fits  3390001.1_Nh_ran.fits  3390001.1_Nh_splitnorm_unc.fits  3390001.1_Nh_swp.fits  3390001.1_Nh_unc.fits  3390001.1_Nh_unc_N.fits  3390001.1_Nh_unc_P.fits  3390001.1_Ns.fits  3390001.1_Ns_2err_unc.fits  3390001.1_Ns_2errfill_unc.fits  3390001.1_Ns_2errfillsup.fits  3390001.1_Ns_2errfillsup_unc.fits  3390001.1_Ns_2errsup_unc.fits  3390001.1_Ns_2errswp_unc.fits  3390001.1_Ns_pt3_unc.fits  3390001.1_Ns_ran.fits  3390001.1_Ns_splitnorm_unc.fits  3390001.1_Ns_swp.fits  3390001.1_Ns_unc.fits  3390001.1_Ns_unc_N.fits  3390001.1_Ns_unc_P.fits  test_irc.py
tests/test_irs_pointing/: irs_pt_0_2_unc.fits  irs_pt_2err_unc.fits  irs_pt_norm_unc.fits  test_irs.py
tests/use_cases/: psf_irs.py  sed.py  specMIR.py  z_sed.py
tests/use_cases/lib/: sizedist_G21hdr.h5
uc/: crossec.py  dieps.py  psf_irs.py  psf_irs_hires.py
uc/lib/: atmabs_tot.h5  extinction_ARAA.h5  specMIR_ARAA.h5
uc/lib/DH21Ad/: Readme.txt  index_DH21Ad_P0.20_0.00_0.500.txt
uc/lib/HD21_Fig14/: ReadMe  ext_summary.mrt  extpol_summary.mrt  ipol_summary.mrt
(+38 files in other folders)
