[build-system]
requires = [
    "poetry-core>=1.0.0",
]
build-backend = "poetry.core.masonry.api"

[constant]
board_size = 3

[tool.poetry]
name = "rapyuta"
version = "2.2.2"
description = "Regular AstroPY UTility Assemblage"
authors = [
    "Dangning HU <dangning.hu@outlook.com>",
]
maintainers = [
    "Dangning HU <dangning.hu@outlook.com>",
]
license = "BSD 3-Clause License"
readme = "README.org"
# documentation = ""
# homepage = ""
repository = "https://github.com/kxxdhdn/RAPYUTA"
keywords = [
    "astronomy",
    "astrophysics",
    "astrometry",
    "imaging",
    "photometry",
    "spectroscopy",
    "space",
    "spitzer",
    "akari",
    "jwst",
]
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Fortran",
    "Programming Language :: IDL",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
]
packages = [
    ## Poetry assumes the package contains a package with the same name as
    ## tool.poetry.name located in the root of the project
    { include = "rapyuta", from = "." },
]
include = [
    { path = "tests", format = "sdist" },
    # { path = "for_wheel.txt", format = ["sdist", "wheel"] },
]
exclude = ["rapyuta._dev"]

[tool.poetry.dependencies]
python = ">=3.8"
astropy = ">=5.1"
colorama = "*"
h5py = "*"
matplotlib = "*"
numpy = "*"
photutils = "*"
reproject = ">=0.7.1"
scipy = "*"
specutils = "*"
tqdm = "*"

[tool.poetry.dev-dependencies]

[tool.poetry.group.test.dependencies]
# pytest = "*"

[tool.poetry.group.docs.dependencies]
# mkdocs = "*"

[tool.poetry.plugins]

[tool.poetry.scripts]
rapyboost = "rapyuta:boost_rapyuta"

# [[tool.poetry.source]]
# name = "private"
# url = "http://example.com/simple"

[tool.poetry.urls]
manual = "https://github.com/kxxdhdn/RAPYUTA/man"
reports = "https://github.com/kxxdhdn/RAPYUTA/issues"
source = "https://github.com/kxxdhdn/RAPYUTA/rapyuta"
