[metadata]
name = rapyuta
version = attr: rapyuta.version.__version__
author = D. HU
author_email = dangning.hu@outlook.com
license = BSD 3-Clause License
license_files = LICENSE
url = https://github.com/kxxdhdn/RAPYUTA
project_urls = 
    Reports = https://github.com/kxxdhdn/RAPYUTA/issues
    Source = https://github.com/kxxdhdn/RAPYUTA/rapyuta
description = Regular AstroPY UTility Assemblage
long_description = file: README.org
keywords = 
    astronomy
    astrophysics
    astrometry
    imaging
    photometry
    spectroscopy
    space
    spitzer
    akari
    jwst
classifiers =
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Fortran
    Programming Language :: IDL
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Scientific/Engineering :: Physics

[options]
zip_safe = False
include_package_data = True
## Set packages to find: to automatically find all sub-packages
package_dir=
    = .
packages = find:
install_requires =
    astropy>=5.1
    colorama
    h5py
    matplotlib
    numpy
    photutils
    reproject>=0.7.1
    scipy
    specutils
    tqdm
python_requires = >=3.8

[options.packages.find]
where = .  # . by default
include = 
    rapyuta* # * by default
exclude = 
    rapyuta._dev # empty by default

[options.entry_points]
console_scripts =
    rapyboost = rapyuta:boost_rapyuta

[options.package_data]
* = lib/*, lib/*/*, lib/*/*/*, lib/*/*/*/*, lib/*/*/*/*/*

